FIX: Add some extra spacing to resource request text [t32120]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@20982 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1363,6 +1363,7 @@ div.video-js {margin:auto;}
         
 #modal_dialog .MessageText {
     text-align:left;
+    margin-bottom: 10px;
     }
 
 #modal .TopInpageNav {
